[BACKLOG-19114] Fix wrong color in selected list item (#628)

--- a/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/themes/public/themes/ruby/globalRuby.css
+++ b/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/themes/public/themes/ruby/globalRuby.css
@@ -4598,7 +4598,7 @@ td.tab-spacer-wrapper {
 }
 
 .tree-item-custom-widget-selected, .tree-item-custom-widget-selected:hover {
-  background-color: rgba(254,0,0,0.2) !important;
+  background-color: rgba(204,0,0,0.2) !important;
   -moz-transition: all 600ms;
   -webkit-transition: all 600ms;
 }
